[tool.poetry]
name = "cost-sensitive"
version = "0.1.0"
description = ""
authors = ["Artur Rejment <arturrejment1@gmail.com>"]
readme = "README.md"
packages = [{include = "cost_sensitive"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
